allowed XJC to accept a directory, and we'll scan for all *.xsd files for you. Useful with those powerless shells (like Windows) that can't do "xjc.sh **/*.xsd"  (zsh rocks!)