@@ -5,6 +5,7 @@
 package com.sun.tools.xjc.reader;
 
 import java.io.File;
+import java.io.IOException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.util.ArrayList;
@@ -18,25 +19,37 @@ import org.xml.sax.InputSource;
 public class Util
 {
     /**
+     * Parses the specified string either as an {@link URL} or as a {@link File}.
+     *
+     * @throws IOException
+     *      if the parameter is neither.
+     */
+    public static Object getFileOrURL(String fileOrURL) throws IOException {
+        try {
+            return new URL(fileOrURL).toExternalForm();
+        } catch (MalformedURLException e) {
+            return new File(fileOrURL).getCanonicalFile();
+        }
+    }
+    /**
      * Gets an InputSource from a string, which contains either
      * a file name or an URL.
      */
     public static InputSource getInputSource(String fileOrURL) {
         try {
-            // try it as an URL
-            try {
-                return new InputSource(escapeSpace(new URL(fileOrURL).toExternalForm()));
-            } catch (MalformedURLException e) {
-                String url = new File(fileOrURL).getCanonicalFile().toURL().toExternalForm();
+            Object o = getFileOrURL(fileOrURL);
+            if(o instanceof URL) {
+                return new InputSource(escapeSpace(((URL)o).toExternalForm()));
+            } else {
+                String url = ((File)o).toURL().toExternalForm();
                 return new InputSource(escapeSpace(url));
             }
-        } catch (Exception e) {
-            // try it as an URL
+        } catch (IOException e) {
             return new InputSource(fileOrURL);
         }
     }
 
-    private static String escapeSpace( String url ) {
+    public static String escapeSpace( String url ) {
         // URLEncoder didn't work.
         StringBuffer buf = new StringBuffer();
         for (int i = 0; i < url.length(); i++) {
